--- a/PInvokeCGAL/PInvokeCGAL.vcxproj.filters
+++ b/PInvokeCGAL/PInvokeCGAL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="baseCGALMeshPointSetDistance.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="baseCGALPolygonal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="baseCGALMeshPointSetDistance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="baseCGALPolygonal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
