--- a/CockroachGH/CockroachGH.csproj
+++ b/CockroachGH/CockroachGH.csproj
@@ -44,7 +44,7 @@
       <HintPath>..\packages\Grasshopper.7.8.21196.5001\lib\net48\Grasshopper.dll</HintPath>
     </Reference>
     <Reference Include="PInvokeCSharp">
-      <HintPath>..\Build\PInvokeCSharp.dll</HintPath>
+      <HintPath>..\PInvokeCSharp\bin\x64\Debug\PInvokeCSharp.dll</HintPath>
     </Reference>
     <Reference Include="PlyReaderWriter, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
